--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <script>
         System.import('/single-spa-config.js')
       </script>
-      <div id="single-spa-playground">
+      <div id="test">
 
       </div>
      
